<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.achesnovitskiy.advisemeamovieamovie.DetailActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_top_buttons" >

        <ImageView
            android:id="@+id/ButtonBackDetail"
            style="@style/TopButtonsDetail"
            android:layout_width="@dimen/size_of_back"
            android:layout_height="@dimen/size_of_back"
            android:contentDescription="@string/button_back"
            android:src="@drawable/ic_arrow_back_blue_24dp"
            android:layout_margin="@dimen/margin_little"
            android:onClick="onClickBack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_of_top_buttons"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageViewAddToToWatch"
                style="@style/TopButtonsDetail"
                android:contentDescription="@string/to_watch"
                android:onClick="onClickChangeToWatch"
                android:layout_weight="1"
                app:srcCompat="@drawable/play_grey" />

            <ImageView
                android:id="@+id/imageViewAddToWatched"
                style="@style/TopButtonsDetail"
                android:contentDescription="@string/watched"
                android:onClick="onClickChangeWatched"
                android:layout_weight="1"
                app:srcCompat="@drawable/check_grey" />

            <ImageView
                android:id="@+id/imageViewAddToFavourite"
                style="@style/TopButtonsDetail"
                android:contentDescription="@string/favourite"
                android:onClick="onClickChangeFavourite"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_grey" />

        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollViewInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewBigPoster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/alert_light_frame" />

            <include
                android:id="@+id/movieInfo"
                layout="@layout/movie_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBigPoster" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>